# Cross-Camera-Player-Mapping

./: .gitattributes  .gitignore  Dockerfile  README.md  Research.md  application.py  pyproject.toml  requirements.txt  sample.py
core/: config.py
core/components/: FrameExtractionStrategies.py  ModelStrategies.py  SynchronizationStrategies.py
core/interfaces/: FrameExtractorInterface.py  ModelInterface.py  SynchronizationInterface.py
core/steps/: FrameExtractor.py  Synchronizer.py
docs/: README.md
src/: IDManager.py  config.py
src/components/: FrameExtractionStrategies.py  ModelStrategies.py  SynchronizationStrategies.py
src/interfaces/: ModelInterface.py  SynchronizationInterface.py
src/steps/: CrossViewMatcher.py  FeatureExtractor.py  FrameExtractor.py  PlayerTracker.py  Synchronizer.py  ViewTransformer.py
utils/: points_utils.py
