[project]
name = "Cross_Camera_Player_Mapping"
version = "1.0.0"
description = "Cross-Camera Player Tracking and Re-Identification of Player in Sports"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "pydantic-settings>=2.7.1",
    "pydantic>=2.10.6",

]



[dependency-groups]
dev = [
    "pytest>=8.3.4",
]

[tool.pip]
extra-index-url = "https://download.pytorch.org/whl/cpu/torch_stable.html"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/philosopher_agents"]

[tool.ruff]
target-version = "py312"