[project]
name = "Cross_Camera_Player_Mapping"
version = "1.0.0"
description = "Cross-Camera Player Tracking and Re-Identification of Player in Sports - An end-to-end multi-camera tracking pipeline for sports analytics."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"


[dependency-groups]
dev = [
    "pytest>=8.3.4",
]

[tool.pip]
extra-index-url = "https://download.pytorch.org/whl/cpu/torch_stable.html"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[project.scripts]
run-pipeline = "application:main"

[tool.hatch.build.targets.wheel]
packages = ["src/"]

